app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
  --navbar-height: 3rem;
  --sidebar-width: 14rem;
  --sidebar-space: 0px;
  --content-width: 780px;
  --content-inline-start: calc(var(--sidebar-space) + 2rem);
  --content-inline-end: calc(100vw - var(--content-width) - var(--sidebar-space) - 2rem);
  --shadow-color: #bbb;
}

:root.dark {
  --background: #0a0a0a;
  --foreground: #ededed;
  --shadow-color: #111;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

.prose {
  max-width: calc(var(--content-width) - 2rem);
}

@media (min-width: 768px) and (max-width: 1439px) {
  body {
    --content-inline-start: calc((100vw - var(--content-width)) / 2 - 2rem);
    --content-inline-end: calc((100vw - var(--content-width)) / 2 - 2rem);
  }

  body.has-side-panel {
    --sidebar-space: var(--sidebar-width);
    --content-inline-start: calc(var(--sidebar-space) + 2rem);
    --content-inline-end: calc(100vw - var(--content-width) - var(--sidebar-space) - 2rem);
  }  
}

@media (min-width: 1440px) {
  :root {
    --sidebar-space: calc(var(--sidebar-width) + 1rem);
    --content-inline-start: calc(var(--sidebar-space));
    --content-inline-end: calc(100vw - var(--content-width) - var(--sidebar-space) - 2rem);
  }
}

@keyframes enter {
  0% {
    transform: scale(0.95);
    opacity: 0;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

@keyframes exit {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  100% {
    transform: scale(0.95);
    opacity: 0;
  }
}

.animate-enter {
  animation: enter 0.2s ease-out;
}

.animate-exit {
  animation: exit 0.3s ease-out forwards;
  pointer-events: none;
}

.post-content {
  padding-inline-start: var(--content-inline-start);
  padding-inline-end: var(--content-inline-end);
  /* transform animation when side panel is open */
  transition: padding 0.3s ease-in-out;
}

.normal-content {
  padding-inline-start: var(--content-inline-start);
  padding-inline-end: 2rem;
  transition: padding 0.3s ease-in-out;
}

.toc {
  display: none;
  inset-inline-start: calc(100% + .5rem);
}

@media (min-width: 1000px) {
  .toc {
    display: block;
  }
}

